--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html>
 <head>
 <title>Doofwelt coming soon...</title>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HC5PYM7SGF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HC5PYM7SGF');
+</script>
 </head>
 <body>
 <h1>Coming soon</h1>
