--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
 <h1>Coming soon</h1>
-<p>Trying to build software? Doofwelt can help you prioritize what needs to be done with a personalized software engineering consultation.</p>
+<p>Consulting for software projects.</p>
 </body>
 </html>
