--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
 <h1>Coming soon</h1>
-<p>Consulting for software projects.</p>
+<p>Welcome to the Doofwelt. Take a look around.</p>
 </body>
 </html>
